Tutorial-Start_to_Finish-BSSNCurvilinear: H constraint test compiles.

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
@@ -419,9 +419,22 @@
     "\n",
     "# import time\n",
     "# start = time.time()\n",
-    "# fin.FD_outputC(\"BSSN/Hamiltonian.h\",lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"H\"),rhs=bssncon.H), params=\"outCverbose=False\")\n",
+    "# Hamiltonianstring = fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"H\"),rhs=bssncon.H), \n",
+    "#                                    params=\"outCverbose=False\")\n",
     "# end = time.time()\n",
-    "# print(\"Finished in \"+str(end-start)+\" seconds.\")"
+    "# print(\"Finished in \"+str(end-start)+\" seconds.\")\n",
+    "\n",
+    "# import loop as lp\n",
+    "# with open(\"BSSN/Hamiltonian.h\", \"w\") as file:\n",
+    "#     file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
+    "#                        [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
+    "#                        [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
+    "#                                       \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
+    "#                                       \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
+    "#                                       \"#pragma omp parallel for\",\n",
+    "#                                       \"    const REAL xx2 = xx[2][i2];\",\n",
+    "#                                       \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
+    "#                                      \"const REAL xx0 = xx[0][i0];\\n\"+Hamiltonianstring))"
    ]
   },
   {
@@ -439,12 +452,23 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"BSSN/xxCart.h\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Generic coordinate NRPy+ file output, Part 1: output the coordinate bounds xxmin[] and xxmax[]:\n",
     "with open(\"BSSN/xxminmax.h\", \"w\") as file:\n",
     "    file.write(\"const REAL xxmin[3] = {\"+str(rfm.xxmin[0])+\",\"+str(rfm.xxmin[1])+\",\"+str(rfm.xxmin[2])+\"};\\n\")\n",
-    "    file.write(\"const REAL xxmax[3] = {\"+str(rfm.xxmax[0])+\",\"+str(rfm.xxmax[1])+\",\"+str(rfm.xxmax[2])+\"};\\n\")"
+    "    file.write(\"const REAL xxmax[3] = {\"+str(rfm.xxmax[0])+\",\"+str(rfm.xxmax[1])+\",\"+str(rfm.xxmax[2])+\"};\\n\")\n",
+    "# Generic coordinate NRPy+ file output, Part 2: output the conversion from (x0,x1,x2) to Cartesian (x,y,z)\n",
+    "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"xCart[0]\",\"xCart[1]\",\"xCart[2]\"],\n",
+    "        \"BSSN/xxCart.h\")"
    ]
   },
   {
@@ -524,12 +548,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting BSSN/BSSNCurvilinear_Playground.c\n"
+      "Appending to BSSN/BSSNCurvilinear_Playground.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile BSSN/BSSNCurvilinear_Playground.c\n",
+    "%%writefile -a BSSN/BSSNCurvilinear_Playground.c\n",
     "\n",
     "// Part P1: Import needed header files\n",
     "#include \"stdio.h\"\n",
@@ -541,15 +565,16 @@
     "#define REAL double\n",
     "\n",
     "// Step P3: Set free parameters for the numerical grid\n",
-    "const REAL RMAX    = 10.0;\n",
+    "const REAL AMPL    = 10.0;\n",
+    "const REAL SINHW   = 0.125;\n",
     "const REAL t_final =  8.0; /* Final time is set so that at t=t_final, \n",
     "                            * data at the origin have not been corrupted \n",
     "                            * by the approximate outer boundary condition */\n",
     "const REAL CFL_FACTOR = 1.0; // Set the CFL Factor\n",
     "\n",
     "// Step P4: Set free parameters for the (Brill-Lindquist) initial data\n",
-    "const REAL BH1_posn_x =-0.5,BH1_posn_x = 0.0,BH1_posn_z = 0.0;\n",
-    "const REAL BH2_posn_x = 0.5,BH2_posn_x = 0.0,BH2_posn_z = 0.0;\n",
+    "const REAL BH1_posn_x =-0.5,BH1_posn_y = 0.0,BH1_posn_z = 0.0;\n",
+    "const REAL BH2_posn_x = 0.5,BH2_posn_y = 0.0,BH2_posn_z = 0.0;\n",
     "const REAL BH1_mass = 0.5,BH2_mass = 0.5;\n",
     "\n",
     "// Part P2b: Declare the IDX4(gf,i,j,k) macro, which enables us to store 4-dimensions of\n",
@@ -561,9 +586,11 @@
     "#define IDX4(g,i,j,k) \\\n",
     "( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * ( (k) + Nxx_plus_2NGHOSTS[2] * (g) ) ) )\n",
     "#define IDX3(i,j,k) ( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * (k) ) )\n",
+    "// Assuming idx = IDX3(i,j,k). Much faster if idx can be reused over and over:\n",
+    "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n",
     "\n",
     "// Part P2c: Set #define's for BSSN gridfunctions. C code generated above\n",
-    "#include \"BSSN/gridfunction_defines.h\"\n",
+    "#include \"gridfunction_defines.h\"\n",
     "\n",
     "#define LOOP_REGION(i0min,i0max, i1min,i1max, i2min,i2max) \\\n",
     "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++)\n",
@@ -579,27 +606,33 @@
     "#include \"BrillLindquist.h\"\n",
     "\n",
     "// Part P4: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
-    "void initial_data(const int Nxx_plus_2NGHOSTS[3],REAL time,REAL *xx[3], REAL *in_gfs) {\n",
+    "void initial_data(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *in_gfs) {\n",
     "#pragma omp parallel for\n",
     "  LOOP_REGION(0,Nxx_plus_2NGHOSTS[0], 0,Nxx_plus_2NGHOSTS[1], 0,Nxx_plus_2NGHOSTS[2]) {\n",
+    "    const int idx = IDX3(i0,i1,i2);\n",
     "    REAL xCart[3];\n",
     "    xxCart(xx, i0,i1,i2, xCart);\n",
     "    BSSN_ID(xx[0][i0],xx[1][i1],xx[2][i2],xCart[0],xCart[1],xCart[2],\n",
-    "            &in_gfs[IDX4(HDD00GF,idx)],&in_gfs[IDX4(HDD01GF,idx)],&in_gfs[IDX4(HDD02GF,idx)],\n",
-    "            &in_gfs[IDX4(HDD11GF,idx)],&in_gfs[IDX4(HDD12GF,idx)],&in_gfs[IDX4(HDD22GF,idx)],\n",
-    "            &in_gfs[IDX4(ADD00GF,idx)],&in_gfs[IDX4(ADD01GF,idx)],&in_gfs[IDX4(ADD02GF,idx)],\n",
-    "            &in_gfs[IDX4(ADD11GF,idx)],&in_gfs[IDX4(ADD12GF,idx)],&in_gfs[IDX4(ADD22GF,idx)],\n",
-    "            &in_gfs[IDX4(LAMBDAU0GF,idx)],&in_gfs[IDX4(LAMBDAU1GF,idx)],&in_gfs[IDX4(LAMBDAU2GF,idx)],\n",
-    "            &in_gfs[IDX4(VETU0GF,idx)],&in_gfs[IDX4(VETU1GF,idx)],&in_gfs[IDX4(VETU2GF,idx)],\n",
-    "            &in_gfs[IDX4(BETU0GF,idx)],&in_gfs[IDX4(BETU1GF,idx)],&in_gfs[IDX4(BETU2GF,idx)],\n",
-    "            &in_gfs[IDX4(ALPHAGF,idx)],&in_gfs[IDX4(CFGF,idx)]);\n",
+    "            &in_gfs[IDX4pt(HDD00GF,idx)],&in_gfs[IDX4pt(HDD01GF,idx)],&in_gfs[IDX4pt(HDD02GF,idx)],\n",
+    "            &in_gfs[IDX4pt(HDD11GF,idx)],&in_gfs[IDX4pt(HDD12GF,idx)],&in_gfs[IDX4pt(HDD22GF,idx)],\n",
+    "            &in_gfs[IDX4pt(ADD00GF,idx)],&in_gfs[IDX4pt(ADD01GF,idx)],&in_gfs[IDX4pt(ADD02GF,idx)],\n",
+    "            &in_gfs[IDX4pt(ADD11GF,idx)],&in_gfs[IDX4pt(ADD12GF,idx)],&in_gfs[IDX4pt(ADD22GF,idx)],\n",
+    "            &in_gfs[IDX4pt(LAMBDAU0GF,idx)],&in_gfs[IDX4pt(LAMBDAU1GF,idx)],&in_gfs[IDX4pt(LAMBDAU2GF,idx)],\n",
+    "            &in_gfs[IDX4pt(VETU0GF,idx)],&in_gfs[IDX4pt(VETU1GF,idx)],&in_gfs[IDX4pt(VETU2GF,idx)],\n",
+    "            &in_gfs[IDX4pt(BETU0GF,idx)],&in_gfs[IDX4pt(BETU1GF,idx)],&in_gfs[IDX4pt(BETU2GF,idx)],\n",
+    "            &in_gfs[IDX4pt(ALPHAGF,idx)],&in_gfs[IDX4pt(CFGF,idx)]);\n",
     "  }\n",
     "}\n",
     "\n",
-    "// Part P5: Declare the function to evaluate the scalar wave RHSs\n",
-    "void rhs_eval(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], REAL *xx[3], const REAL *in_gfs,REAL *rhs_gfs) {\n",
-    "#include \"ScalarWaveCurvilinear_RHSs.h\"\n",
+    "void Hamiltonian_constraint(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], REAL *xx[3], \n",
+    "                            REAL *in_gfs, REAL *aux_gfs) {\n",
+    "#include \"Hamiltonian.h\"    \n",
     "}\n",
+    "\n",
+    "// Part P5: Declare the function to evaluate the scalar wave RHSs\n",
+    "//void rhs_eval(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], REAL *xx[3], const REAL *in_gfs,REAL *rhs_gfs) {\n",
+    "//#include \"ScalarWaveCurvilinear_RHSs.h\"\n",
+    "//}\n",
     "\n",
     "// main() function:\n",
     "// Step 0: Read command-line input, set up grid structure, allocate memory for gridfunctions, set up coordinates\n",
@@ -632,7 +665,8 @@
     "#include \"xxminmax.h\"\n",
     "\n",
     "  // Step 0c: Allocate memory for gridfunctions\n",
-    "  REAL *evol_gfs    = (REAL *)malloc(sizeof(REAL) * NUM_GFS * Nxx_plus_2NGHOSTS_tot);\n",
+    "  REAL *evol_gfs = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS_tot);\n",
+    "  REAL *aux_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_AUX_GFS * Nxx_plus_2NGHOSTS_tot);\n",
     "  \n",
     "  // Step 0d: Set up space and time coordinates\n",
     "  // Step 0d.i: Set \\Delta x^i on uniform grids.\n",
@@ -649,24 +683,46 @@
     "  }\n",
     "  \n",
     "  // Step 1: Set up initial data to be exact solution at time=0:\n",
-    "  exact_solution(Nxx_plus_2NGHOSTS, 0.0, xx, evol_gfs);\n",
+    "  initial_data(Nxx_plus_2NGHOSTS, xx, evol_gfs);\n",
+    "  \n",
+    "  // Step 2: Evaluate Hamiltonian constraint violation\n",
+    "  Hamiltonian_constraint(Nxx,Nxx_plus_2NGHOSTS,dxx, xx, evol_gfs, aux_gfs);\n",
     "\n",
     "  /* Step 3: Output relative error between numerical and exact solution, */\n",
     "  const int i0MIN=NGHOSTS; // In spherical, r=Delta r/2.\n",
     "  const int i1mid=Nxx_plus_2NGHOSTS[1]/2;\n",
     "  const int i2mid=Nxx_plus_2NGHOSTS[2]/2;\n",
-    "  exact_solution(Nxx_plus_2NGHOSTS,(n+1)*dt, xx, k1_gfs);\n",
-    "  const double exact     = (double)k1_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
-    "  const double numerical = (double)evol_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
-    "  const double relative_error = fabs((exact-numerical)/exact);\n",
-    "  printf(\"%e %e || %e %e %e: %e %e\\n\",(double)((n+1)*dt), log10(relative_error),\n",
-    "         (double)xx[0][i0MIN],(double)xx[1][i1mid],(double)xx[2][i2mid], numerical,exact);\n",
+    "  LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, i1mid,i1mid+1, i2mid, i2mid+1) {\n",
+    "    REAL xx0 = xx[0][i0];\n",
+    "    REAL xx1 = xx[1][i1];\n",
+    "    REAL xx2 = xx[2][i2];\n",
+    "    REAL xCart[3];\n",
+    "#include \"xxCart.h\"\n",
+    "\n",
+    "    printf(\"%e %e %e %e\\n\",xCart[0],xCart[1],xCart[2],aux_gfs[IDX4(HGF,i0,i1,i2)]);\n",
+    "  }\n",
+    "  //const double exact     = (double)k1_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
+    "  //const double numerical = (double)evol_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
+    "  //const double relative_error = fabs((exact-numerical)/exact);\n",
+    "  //printf(\"%e %e || %e %e %e: %e %e\\n\",(double)((n+1)*dt), log10(relative_error),\n",
+    "  //       (double)xx[0][i0MIN],(double)xx[1][i1mid],(double)xx[2][i2mid], numerical,exact);\n",
     "  \n",
     "  // Step 4: Free all allocated memory\n",
     "  free(evol_gfs);\n",
     "  for(int i=0;i<3;i++) free(xx[i]);\n",
     "  return 0;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd BSSN/\n",
+    "!gcc -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp BSSN/BSSNCurvilinear_Playground.c -o BSSNCurvilinear_Playground -lm\n",
+    "!taskset -c 0,1 ./BSSNCurvilinear_Playground 20 10 20 >/dev/null"
    ]
   }
  ],
