Tutorial-Start_to_Finish-BSSNCurvilinear: Hamiltonian constraint agrees with original SENR code!

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "**Exercise to student: Given the prescripion above, why do the integers $\\left(\\rm{i0},\\rm{i1},\\rm{i2}\\right)$ need to be even?**\n",
     "\n",
-    "Next we generate the C code needed for applying boundary conditions in generic coordinate systems:\n",
+    "Next we generate the C code needed for applying boundary conditions in generic coordinate systems (and, in the case of \"xxminmax.h\", to set up the numerical grid coordinates as well):\n",
     "1. $(x_{0},x_{1},x_{2})_{\\rm min}$, $(x_{0},x_{1},x_{2})_{\\rm max}$, (ScalarWaveCurvilinear/xxminmax.h)\n",
     "1. $\\left(x(x_0,x_1,x_2),y(x_0,x_1,x_2),z(x_0,x_1,x_2)\\right)$, (ScalarWaveCurvilinear/xxCart.h)\n",
     "1. $\\left(x_0(x,y,z),x_1(x,y,z),x_2(x,y,z)\\right)$, (ScalarWaveCurvilinear/Cart_to_xx.h):"
