--- a/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
@@ -65,7 +65,8 @@
     "\n",
     "# Step P1: Set up reference metric\n",
     "# Step P1a: Choose SinhSpherical coordinates\n",
-    "CoordSystem = \"SinhSpherical\"\n",
+    "#CoordSystem = \"SinhSpherical\"\n",
+    "CoordSystem = \"Cartesian\"\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",CoordSystem)\n",
     "# Step P1b: Set up needed reference metric quantities\n",
     "rfm.reference_metric()\n",
@@ -86,7 +87,7 @@
     "psi = sp.sympify(1)\n",
     "psi += BH1_mass / ( 2 * sp.sqrt((Cartxyz[0]-BH1_posn_x)**2 + (Cartxyz[1]-BH1_posn_y)**2 + (Cartxyz[2]-BH1_posn_z)**2) )\n",
     "psi += BH2_mass / ( 2 * sp.sqrt((Cartxyz[0]-BH2_posn_x)**2 + (Cartxyz[1]-BH2_posn_y)**2 + (Cartxyz[2]-BH2_posn_z)**2) )\n",
-    "\n",
+    "    \n",
     "# Step 2: Set all needed ADM variables in Cartesian coordinates\n",
     "gammaCartDD = ixp.zerorank2()\n",
     "KCartDD     = ixp.zerorank2() # K_{ij} = 0 for these initial data\n",
@@ -116,13 +117,13 @@
     "\n",
     "in this case assuming that all components of the initial shift and its time derivative are zero: $\\beta^i=\\mathcal{V}^i=\\mathcal{B}^i=0$.\n",
     "\n",
-    "First we have (Eqs. 1 and 2 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
+    "First we have (Eqs. 2 and 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
     "$$\n",
-    "\\bar{\\gamma}_{i j} = \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{1/3} \\gamma_{ij}.\n",
+    "\\bar{\\gamma}_{i j} = \\left(\\frac{\\bar{\\gamma}}{\\gamma}\\right)^{1/3} \\gamma_{ij}.\n",
     "$$\n",
     "Brill-Linquist initial data are conformally flat, meaning that $\\bar{\\gamma}=\\hat{\\gamma}=1$ in Cartesian coordinates. So for these initial data in Cartesian coordinates we have\n",
     "$$\n",
-    "\\bar{\\gamma}_{i j} = \\gamma^{1/3} \\gamma_{ij}.\n",
+    "\\bar{\\gamma}_{i j} = \\gamma^{-1/3} \\gamma_{ij}.\n",
     "$$"
    ]
   },
@@ -137,7 +138,7 @@
     "gammaCartbarDD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        gammaCartbarDD[i][j] = gammaCartDET**(sp.Rational(1,3))*gammaCartDD[i][j]"
+    "        gammaCartbarDD[i][j] = gammaCartDET**(-sp.Rational(1,3))*gammaCartDD[i][j]"
    ]
   },
   {
@@ -201,15 +202,17 @@
    "source": [
     "# Step 3c: Define $\\bar{\\Lambda}^i$ from Eqs. 4 and 5 of Baumgarte et al.: https://arxiv.org/pdf/1211.6632.pdf\n",
     "LambdaCartbarU = ixp.zerorank1()\n",
+    "# Need to compute \\bar{\\gamma}^{ij} from \\bar{\\gamma}_{ij}:\n",
+    "gammaCartbarUU, gammaCartbarDET = ixp.symm_matrix_inverter3x3(gammaCartbarDD)\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
-    "                LambdaCartbarU[i] += sp.Rational(1,2)*gammaCartUU[j][k]*gammaCartUU[i][l]* \\\n",
-    "                                        ( sp.diff(gammaCartUU[l][j],Cartxyz[k]) + \n",
-    "                                          sp.diff(gammaCartUU[l][k],Cartxyz[j]) -\n",
-    "                                          sp.diff(gammaCartUU[j][k],Cartxyz[l]) )"
+    "                LambdaCartbarU[i] += sp.Rational(1,2)*gammaCartbarUU[j][k]*gammaCartbarUU[i][l]* \\\n",
+    "                                        ( sp.diff(gammaCartbarUU[l][j],Cartxyz[k]) + \n",
+    "                                          sp.diff(gammaCartbarUU[l][k],Cartxyz[j]) -\n",
+    "                                          sp.diff(gammaCartbarUU[j][k],Cartxyz[l]) )"
    ]
   },
   {
@@ -345,7 +348,8 @@
     "    betU[i]    =         BU[i] / rfm.ReU[i]\n",
     "    for j in range(DIM):\n",
     "        hDD[i][j] = (gammabarDD[i][j] - rfm.ghatDD[i][j]) / rfm.ReDD[i][j]\n",
-    "        aDD[i][j] =                          AbarDD[i][j] / rfm.ReDD[i][j]"
+    "        aDD[i][j] =                          AbarDD[i][j] / rfm.ReDD[i][j]\n",
+    "#print(sp.mathematica_code(hDD[0][0]))"
    ]
   },
   {
@@ -404,9 +408,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::AMPL\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::SINHW\n"
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
+      "Finished in 2.88485622406 seconds.\n"
      ]
     }
    ],
@@ -417,24 +425,24 @@
     "import finite_difference as fin\n",
     "H = gri.register_gridfunctions(\"AUX\",\"H\")\n",
     "\n",
-    "# import time\n",
-    "# start = time.time()\n",
-    "# Hamiltonianstring = fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"H\"),rhs=bssncon.H), \n",
-    "#                                    params=\"outCverbose=False\")\n",
-    "# end = time.time()\n",
-    "# print(\"Finished in \"+str(end-start)+\" seconds.\")\n",
+    "import time\n",
+    "start = time.time()\n",
+    "Hamiltonianstring = fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"H\"),rhs=bssncon.H), \n",
+    "                                   params=\"outCverbose=False\")\n",
+    "end = time.time()\n",
+    "print(\"Finished in \"+str(end-start)+\" seconds.\")\n",
     "\n",
-    "# import loop as lp\n",
-    "# with open(\"BSSN/Hamiltonian.h\", \"w\") as file:\n",
-    "#     file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
-    "#                        [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
-    "#                        [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
-    "#                                       \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
-    "#                                       \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
-    "#                                       \"#pragma omp parallel for\",\n",
-    "#                                       \"    const REAL xx2 = xx[2][i2];\",\n",
-    "#                                       \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "#                                      \"const REAL xx0 = xx[0][i0];\\n\"+Hamiltonianstring))"
+    "import loop as lp\n",
+    "with open(\"BSSN/Hamiltonian.h\", \"w\") as file:\n",
+    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
+    "                       [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
+    "                       [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
+    "                                      \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
+    "                                      \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
+    "                                      \"#pragma omp parallel for\",\n",
+    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
+    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
+    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+Hamiltonianstring))"
    ]
   },
   {
@@ -565,6 +573,11 @@
     "#define REAL double\n",
     "\n",
     "// Step P3: Set free parameters for the numerical grid\n",
+    "const REAL xmin = -10.,xmax=10.;\n",
+    "const REAL ymin = -10.,ymax=10.;\n",
+    "const REAL zmin = -10.,zmax=10.;\n",
+    "\n",
+    "const REAL RMAX    = 10.0;\n",
     "const REAL AMPL    = 10.0;\n",
     "const REAL SINHW   = 0.125;\n",
     "const REAL t_final =  8.0; /* Final time is set so that at t=t_final, \n",
@@ -573,9 +586,9 @@
     "const REAL CFL_FACTOR = 1.0; // Set the CFL Factor\n",
     "\n",
     "// Step P4: Set free parameters for the (Brill-Lindquist) initial data\n",
-    "const REAL BH1_posn_x =-0.5,BH1_posn_y = 0.0,BH1_posn_z = 0.0;\n",
+    "const REAL BH1_posn_x =-0.0,BH1_posn_y = 0.0,BH1_posn_z = 0.0;\n",
     "const REAL BH2_posn_x = 0.5,BH2_posn_y = 0.0,BH2_posn_z = 0.0;\n",
-    "const REAL BH1_mass = 0.5,BH2_mass = 0.5;\n",
+    "const REAL BH1_mass = 1.0,BH2_mass = 0.0;\n",
     "\n",
     "// Part P2b: Declare the IDX4(gf,i,j,k) macro, which enables us to store 4-dimensions of\n",
     "//           data in a 1D array. In this case, consecutive values of \"i\" \n",
@@ -684,7 +697,6 @@
     "  \n",
     "  // Step 1: Set up initial data to be exact solution at time=0:\n",
     "  initial_data(Nxx_plus_2NGHOSTS, xx, evol_gfs);\n",
-    "  \n",
     "  // Step 2: Evaluate Hamiltonian constraint violation\n",
     "  Hamiltonian_constraint(Nxx,Nxx_plus_2NGHOSTS,dxx, xx, evol_gfs, aux_gfs);\n",
     "\n",
@@ -696,10 +708,11 @@
     "    REAL xx0 = xx[0][i0];\n",
     "    REAL xx1 = xx[1][i1];\n",
     "    REAL xx2 = xx[2][i2];\n",
-    "    REAL xCart[3];\n",
-    "#include \"xxCart.h\"\n",
-    "\n",
-    "    printf(\"%e %e %e %e\\n\",xCart[0],xCart[1],xCart[2],aux_gfs[IDX4(HGF,i0,i1,i2)]);\n",
+    "    //REAL xCart[3];\n",
+    "//#include \"xxCart.h\"\n",
+    "    int idx = IDX3(i0,i1,i2);\n",
+    "    printf(\"%e %e %e %e %e %e %e %e\\n\",xx0,xx1,xx2, aux_gfs[IDX4pt(HGF,idx)],evol_gfs[IDX4pt(CFGF,idx)],\n",
+    "           evol_gfs[IDX4pt(ALPHAGF,idx)],evol_gfs[IDX4pt(VETU0GF,idx)],evol_gfs[IDX4pt(HDD00GF,idx)]);\n",
     "  }\n",
     "  //const double exact     = (double)k1_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
     "  //const double numerical = (double)evol_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
@@ -716,13 +729,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "!cd BSSN/\n",
     "!gcc -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp BSSN/BSSNCurvilinear_Playground.c -o BSSNCurvilinear_Playground -lm\n",
-    "!taskset -c 0,1 ./BSSNCurvilinear_Playground 20 10 20 >/dev/null"
+    "!taskset -c 0,1 ./BSSNCurvilinear_Playground 96 96 96 > out96-R00.txt"
    ]
   }
  ],
