--- a/Tutorial-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-GiRaFFEFood_HO.ipynb
@@ -41,9 +41,12 @@
     "\n",
     "# Step 1a: Set commonly used parameters.\n",
     "thismodule = \"GiRaFFEFood_HO\"\n",
-    "#Set the spatial dimension parameter to 3.\n",
+    "# Set the spatial dimension parameter to 3.\n",
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
+    "\n",
+    "# Create a parameter to control the initial data choice. For now, this will only have Exact Wald as an option.\n",
+    "par.initialize_param(par.glb_param(\"char\", thismodule, \"IDchoice\", \"Exact_Wald\"))\n",
     "\n",
     "# Step 1b: Set Cparameters we need to use and the gridfunctions we'll need.\n",
     "M,M_PI = par.Cparameters(\"REAL\",thismodule,[\"M\",\"M_PI\"]) # The mass of the black hole\n",
@@ -76,8 +79,15 @@
     "# The r and theta components (0 and 1) are now 0\n",
     "r     = rfm.xxSph[0]\n",
     "theta = rfm.xxSph[1]\n",
-    "AsphD[2] = (r * r * sp.sin(theta)**2)/2\n",
-    "EsphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)\n"
+    "\n",
+    "IDchoice = par.parval_from_str(\"IDchoice\")\n",
+    "\n",
+    "if IDchoice is \"Exact_Wald\":\n",
+    "    AsphD[2] = (r * r * sp.sin(theta)**2)/2\n",
+    "    EsphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)\n",
+    "else:\n",
+    "    print(\"Error: IDchoice == \"+par.parval_from_str(\"IDchoice\")+\" unsupported!\")\n",
+    "    exit(1)"
    ]
   },
   {
@@ -89,32 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Tried to register the gridfunction \"AD0\" twice (ignored type)\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'exit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-f5de94e5bf13>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#dx__drrefmetric_0UDmatrix = drrefmetric__dx_0UDmatrix.inv() # We don't actually need this in this case.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mAD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mixp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister_gridfunctions_for_single_rank1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"AUX\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"AD\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mED\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mixp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister_gridfunctions_for_single_rank1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"AUX\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"ED\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup/nrpytutorial/indexedexp.py\u001b[0m in \u001b[0;36mregister_gridfunctions_for_single_rank1\u001b[0;34m(gf_type, gf_basename, DIM)\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0mgf_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mIDX_OBJ_TMP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0mgri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister_gridfunctions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgf_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgf_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0;31m# Step 3: Return array of SymPy variables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup/nrpytutorial/grid.py\u001b[0m in \u001b[0;36mregister_gridfunctions\u001b[0;34m(gf_type, gf_names)\u001b[0m\n\u001b[1;32m    109\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mgf_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mglb_gridfcs_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error: Tried to register the gridfunction \\\"\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mgf_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\\" twice (ignored type)\\n\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 111\u001b[0;31m                 \u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    112\u001b[0m         \u001b[0;31m# If no duplicate found, append to \"gridfunctions\" list:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m         \u001b[0mglb_gridfcs_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglb_gridfc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgf_type\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgf_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'exit' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
     "drrefmetric__dx_0UDmatrix = sp.Matrix([[sp.diff(rfm.xxSph[0],rfm.xx[0]), sp.diff(rfm.xxSph[0],rfm.xx[1]), sp.diff(rfm.xxSph[0],rfm.xx[2])],\n",
@@ -142,22 +129,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'float' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-a3a3ddbf6b11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# For TEMUU, we can reuse our code from GiRaFFE_HO.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mu0_smallb_Poynting__Cartesian\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu0_smallb_Poynting__Cartesian\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mu0b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mu0b\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_u0_smallb_Poynting__Cartesian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgammaDD\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbetaU\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mValenciavU\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mBU\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# We will now pull in the four metric and its inverse.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup/nrpytutorial/u0_smallb_Poynting__Cartesian/u0_smallb_Poynting__Cartesian.py\u001b[0m in \u001b[0;36mcompute_u0_smallb_Poynting__Cartesian\u001b[0;34m(gammaDD, betaU, alpha, ValenciavU, BU)\u001b[0m\n\u001b[1;32m    138\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m     computeu0_Cfunction += outputC([R,Rmax],[\"const double R\",\"const double Rmax\"],\"returnstring\",\n\u001b[0;32m--> 140\u001b[0;31m                                    params=\"includebraces=False,CSE_varprefix=tmpR,outCverbose=False\")\n\u001b[0m\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m     \u001b[0mcomputeu0_Cfunction\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"if(R <= Rmax) \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup/nrpytutorial/outputC.py\u001b[0m in \u001b[0;36moutputC\u001b[0;34m(sympyexpr, output_varname_str, filename, params, prestring, poststring)\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[0;31m# Output: C code, as a string.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0moutputC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msympyexpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_varname_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"stdout\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprestring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpoststring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 128\u001b[0;31m     \u001b[0moutCparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse_outCparams_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    129\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m     \u001b[0mTYPE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparval_from_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PRECISION\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup/nrpytutorial/outputC.py\u001b[0m in \u001b[0;36mparse_outCparams_string\u001b[0;34m(params)\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0mparnm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplitstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m             \u001b[0mparnm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplitstring\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplitstring\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'float' object cannot be interpreted as an integer"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Step 4: Register the basic spacetime quantities\n",
     "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
@@ -202,7 +174,9 @@
     "    smallbU[mu] = u0b.smallb4U[mu]\n",
     "    smallbD[mu] = u0b.smallb4D[mu]\n",
     "\n",
-    "smallb2 = u0b.smallb2TEMUU = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"TEMUU\",\"sym01\",DIM=4)\n",
+    "smallb2 = u0b.smallb2\n",
+    "\n",
+    "TEMUU = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"TEMUU\",\"sym01\",DIM=4)\n",
     "\n",
     "TEMUU[0][0] = smallb2*u0*u0 + smallb2*g4UU[0][0]/2 - smallbU[0]*smallbU[0]\n",
     "for mu in range(1,4):\n",
@@ -216,33 +190,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: sort out Valencia vs. Drift velocity\n",
-    "\n",
-    "--$n^\\mu = (1/\\alpha, -\\beta^i/\\alpha)$\n",
-    "\n",
-    "We will now find the (conformal?) Poynting flux given by $$S_\\mu = -n_\\nu T^\\nu_{{\\rm EM} \\mu}$$ and $$\\tilde{S}_i = \\sqrt{\\gamma} S_i.$$\n"
+    "We will now find the densitized Poynting flux given by $$S_\\mu = -n_\\nu T^\\nu_{{\\rm EM} \\mu}$$ and $$\\tilde{S}_i = \\sqrt{\\gamma} S_i, $$ where $n^\\mu = (1/\\alpha, -\\beta^i/\\alpha)$.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    nU[i] = -betaU[i] / alpha # we only need the spatial components here.\n",
+    "\n",
+    "# Next, we'll lower the index for both n and T\n",
+    "nD = ixp.zerorank1()\n",
+    "TEMUD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        nD[i] = gammaDD[i][j] * nU[j]\n",
+    "        for k in range(DIM):\n",
+    "            TEMUD[i][j] = gammaDD[j][k] * TEMUU[i+1][k+1]\n",
+    "            \n",
+    "for i in range(DIM):\n",
+    "    StildeD[i] = sp.sympify(0)\n",
+    "    for j in range(DIM):\n",
+    "        StildeD[i] += -gammadet * nD[j] * TEMUD[j][i]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now find the velocity $$v^i = 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^i$$"
+    "We will now build the drift velocity $$v^i = 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^i$$. Then, we will need to transform it to the Valencia 3-velocity using the rule $\\bar{v}^i = \\frac{1}{\\alpha} \\left(v^i +\\beta^i \\right)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# B^2 is an inner product defined in the usual way:\n",
+    "B2 = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
+    "\n",
+    "driftvU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    driftvU[i] = -betaU[i]\n",
+    "    for j in range(DIM):\n",
+    "        driftvU[i] += 4*M_PI*alpha*gammaUU[i][j]*StildeD[j]/gammadet/B2\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    ValenciavU[i] = (driftvU[i] + betaU[i])/alpha\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +267,13 @@
     "        for k in range(DIM):\n",
     "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
