Tutorial-Start_to_Finish-BSSNCurvilinear: Now works in Spherical coordinates!

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
@@ -66,7 +66,7 @@
     "# Step P1: Set up reference metric\n",
     "# Step P1a: Choose SinhSpherical coordinates\n",
     "#CoordSystem = \"SinhSpherical\"\n",
-    "CoordSystem = \"Cartesian\"\n",
+    "CoordSystem = \"Spherical\"\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",CoordSystem)\n",
     "# Step P1b: Set up needed reference metric quantities\n",
     "rfm.reference_metric()\n",
@@ -269,31 +269,34 @@
     "        LambdabarU[i] += Jac_dUrfm_dDCartUD[i][j]*LambdaCartbarU[j]\n",
     "        betaU[i]      += Jac_dUrfm_dDCartUD[i][j]*betaCartU[j]\n",
     "        BU[i]         += Jac_dUrfm_dDCartUD[i][j]*BCartU[j]\n",
-    "        for k in range(3):\n",
-    "            for l in range(3):\n",
-    "                gammaDD[i][j]    += Jac_dUrfm_dDCartUD[k][i]*Jac_dUrfm_dDCartUD[l][j]*gammaCartDD[k][l]\n",
-    "                gammabarDD[i][j] += Jac_dUrfm_dDCartUD[k][i]*Jac_dUrfm_dDCartUD[l][j]*gammaCartbarDD[k][l]\n",
-    "                AbarDD[i][j]     += Jac_dUrfm_dDCartUD[k][i]*Jac_dUrfm_dDCartUD[l][j]*ACartbarDD[k][l]"
+    "        for k in range(DIM):\n",
+    "            for l in range(DIM):\n",
+    "                gammaDD[i][j]    += Jac_dUCart_dDrfmUD[k][i]*Jac_dUCart_dDrfmUD[l][j]*   gammaCartDD[k][l]\n",
+    "                gammabarDD[i][j] += Jac_dUCart_dDrfmUD[k][i]*Jac_dUCart_dDrfmUD[l][j]*gammaCartbarDD[k][l]\n",
+    "                AbarDD[i][j]     += Jac_dUCart_dDrfmUD[k][i]*Jac_dUCart_dDrfmUD[l][j]*    ACartbarDD[k][l]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we set the conformal factor variable $\\texttt{cf}$, which is set by the \"BSSN_RHSs::ConformalFactor\" parameter. For example if \"ConformalFactor\" is set to \"phi\", we can use Eq. 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), assuming the initial data are conformally flat ($\\bar{\\gamma}=1$):\n",
+    "Next we set the conformal factor variable $\\texttt{cf}$, which is set by the \"BSSN_RHSs::ConformalFactor\" parameter. For example if \"ConformalFactor\" is set to \"phi\", we can use Eq. 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), which in arbitrary coordinates is written:\n",
     "\n",
     "$$\n",
-    "\\phi = \\frac{1}{12} \\log(\\gamma).\n",
+    "\\phi = \\frac{1}{12} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right).\n",
     "$$\n",
     "\n",
     "Alternatively if \"BSSN_RHSs::ConformalFactor\" is set to \"chi\", then\n",
     "$$\n",
-    "\\chi = e^{-4 \\phi} = \\exp\\left(-4 \\frac{1}{12} \\log(\\gamma)\\right) = \\exp\\left(-\\frac{1}{3} \\log(\\gamma)\\right) = \\gamma^{-1/3}.\n",
+    "\\chi = e^{-4 \\phi} = \\exp\\left(-4 \\frac{1}{12} \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) \n",
+    "= \\exp\\left(-\\frac{1}{3} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{-1/3}.\n",
     "$$\n",
     "\n",
     "Finally if \"BSSN_RHSs::ConformalFactor\" is set to \"W\", then\n",
     "$$\n",
-    "W = e^{-2 \\phi} = \\exp\\left(-2 \\frac{1}{12} \\log(\\gamma)\\right) = \\exp\\left(-\\frac{1}{6} \\log(\\gamma)\\right) = \\gamma^{-1/6}.\n",
+    "W = e^{-2 \\phi} = \\exp\\left(-2 \\frac{1}{12} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \n",
+    "\\exp\\left(-\\frac{1}{6} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \n",
+    "\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{-1/6}.\n",
     "$$"
    ]
   },
@@ -304,13 +307,16 @@
    "outputs": [],
    "source": [
     "cf = sp.sympify(0)\n",
+    "\n",
     "gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "gammabarUU, gammabarDET = ixp.symm_matrix_inverter3x3(gammabarDD)\n",
+    "\n",
     "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
-    "    cf = sp.Rational(1,12)*sp.log(gammaDET)\n",
+    "    cf = sp.Rational(1,12)*sp.log(gammaDET/gammabarDET)\n",
     "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
-    "    cf = gammaDET**(-sp.Rational(1,3))\n",
+    "    cf = (gammaDET/gammabarDET)**(-sp.Rational(1,3))\n",
     "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
-    "    cf = gammaDET**(-sp.Rational(1,6))\n",
+    "    cf = (gammaDET/gammabarDET)**(-sp.Rational(1,6))\n",
     "else:\n",
     "    print(\"Error ConformalFactor type = \\\"\"+par.parval_from_str(\"ConformalFactor\")+\"\\\" unknown.\")\n",
     "    exit(1)"
@@ -408,13 +414,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "Finished in 2.88485622406 seconds.\n"
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "Finished in 18.204406023 seconds.\n"
      ]
     }
    ],
@@ -711,8 +713,9 @@
     "    //REAL xCart[3];\n",
     "//#include \"xxCart.h\"\n",
     "    int idx = IDX3(i0,i1,i2);\n",
-    "    printf(\"%e %e %e %e %e %e %e %e\\n\",xx0,xx1,xx2, aux_gfs[IDX4pt(HGF,idx)],evol_gfs[IDX4pt(CFGF,idx)],\n",
-    "           evol_gfs[IDX4pt(ALPHAGF,idx)],evol_gfs[IDX4pt(VETU0GF,idx)],evol_gfs[IDX4pt(HDD00GF,idx)]);\n",
+    "    printf(\"%e %e %e %e %e %e %e %e %e\\n\",xx0,xx1,xx2, aux_gfs[IDX4pt(HGF,idx)],evol_gfs[IDX4pt(CFGF,idx)],\n",
+    "           evol_gfs[IDX4pt(ALPHAGF,idx)],evol_gfs[IDX4pt(VETU0GF,idx)],evol_gfs[IDX4pt(HDD00GF,idx)],\n",
+    "           evol_gfs[IDX4pt(LAMBDAU0GF,idx)]);\n",
     "  }\n",
     "  //const double exact     = (double)k1_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
     "  //const double numerical = (double)evol_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
@@ -737,6 +740,13 @@
     "!gcc -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp BSSN/BSSNCurvilinear_Playground.c -o BSSNCurvilinear_Playground -lm\n",
     "!taskset -c 0,1 ./BSSNCurvilinear_Playground 96 96 96 > out96-R00.txt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
