--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -44,28 +44,29 @@
     "+ Application: [The Scalar Wave Equation in Curvilinear Coordinates, using a Reference Metric](Tutorial-ScalarWaveCurvilinear.ipynb)\n",
     "    + **Start-to-Finish Example**: [Numerically Solving the Scalar Wave Equation in Curvilinear Coordinates: A Complete C Code](Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb)\n",
     "+ Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-MaxwellCurvilinear.ipynb) (*Courtesy Ian Ruchlin*)\n",
-    "+ Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)\n",
+    "+ Application: [General Relativity in the BSSN Formalism, in singular curvilinear coordinates](Tutorial-BSSNCurvilinear.ipynb)\n",
+    "    + **Start-to-Finish Example**: [Setting up two-black-hole initial data](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)\n",
     "    + Application (in progress) [Adding the $8\\pi T^{\\mu\\nu}$ source terms to the BSSN Equations](Tutorial-BSSNCurvilinear_Plus_Matter_Sources.ipynb)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
