Added the .ccl files to GiRaFFEFood.

--- a/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
@@ -70,6 +70,7 @@
     "                        ]\n",
     "\n",
     "GiRaFFEFood_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_to_print)\n",
+    "GiRaFFEFood_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + GiRaFFEFood_CKernel\n",
     "\n",
     "GiRaFFEFood_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
     "                               [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
@@ -97,10 +98,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEFood/src/InitialData.c\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile GiRaFFEFood/src/InitialData.c\n",
+    "#include <math.h>\n",
+    "#include <stdio.h>\n",
+    "\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "\n",
+    "void GiRaFFE_ExactWaldID(CCTK_ARGUMENTS)\n",
+    "{\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  \n",
+    "  const CCTK_REAL invdx0 = 1.0 / (CCTK_DELTA_SPACE(0));\n",
+    "  const CCTK_REAL invdx1 = 1.0 / (CCTK_DELTA_SPACE(1));\n",
+    "  const CCTK_REAL invdx2 = 1.0 / (CCTK_DELTA_SPACE(2));\n",
+    "\n",
+    "  const CCTK_REAL *xGF = x;\n",
+    "  const CCTK_REAL *yGF = y;\n",
+    "  const CCTK_REAL *zGF = z;\n",
+    "  const CCTK_REAL *gammaDD00GF = gxx;\n",
+    "  const CCTK_REAL *gammaDD01GF = gxy;\n",
+    "  const CCTK_REAL *gammaDD02GF = gxz;\n",
+    "  const CCTK_REAL *gammaDD11GF = gyy;\n",
+    "  const CCTK_REAL *gammaDD12GF = gyz;\n",
+    "  const CCTK_REAL *gammaDD22GF = gzz;\n",
+    "  const CCTK_REAL *alphaGF = alp;\n",
+    "  const CCTK_REAL *betaU0GF = betax;\n",
+    "  const CCTK_REAL *betaU1GF = betay;\n",
+    "  const CCTK_REAL *betaU2GF = betaz;\n",
+    "    \n",
+    "  CCTK_REAL *ValenciavU0GF = ValenciavU0;\n",
+    "  CCTK_REAL *ValenciavU1GF = ValenciavU1;\n",
+    "  CCTK_REAL *ValenciavU2GF = ValenciavU2;\n",
+    "  CCTK_REAL *StildeD0GF = StildeD0;\n",
+    "  CCTK_REAL *StildeD1GF = StildeD1;\n",
+    "  CCTK_REAL *StildeD2GF = StildeD2;\n",
+    "  CCTK_REAL *BU0GF = BU0;\n",
+    "  CCTK_REAL *BU1GF = BU1;\n",
+    "  CCTK_REAL *BU2GF = BU2;\n",
+    "  CCTK_REAL *AD0GF = AD0;\n",
+    "  CCTK_REAL *AD1GF = AD1;\n",
+    "  CCTK_REAL *AD2GF = AD2;\n",
+    "  {\n",
+    "#include \"GiRaFFEFood_ExactWald.h\"\n",
+    "  }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +173,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEFood/interface.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile GiRaFFEFood/interface.ccl\n",
+    "implements: GiRaFFEFood_HO\n",
+    "inherits: admbase GiRaFFE_HO grid HydroBase\n",
+    "\n",
+    "void FUNCTION GiRaFFE_to_HydroBase()\n",
+    "USES FUNCTION GiRaFFE_to_HydroBase\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +202,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEFood/param.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile GiRaFFEFood/param.ccl\n",
+    "shares: grid\n",
+    "\n",
+    "USES KEYWORD type\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_KEYWORD initial_data \"Type of initial data\"\n",
+    "{\n",
+    "  \"ExactWald\"      :: \"Exact Wald initial data\"\n",
+    "} \"ExactWald\"\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_REAL M \"Kerr-Schild BH mass. Probably should always set M=1.\"\n",
+    "{\n",
+    "  0.0:* :: \"Must be positive\"\n",
+    "} 1.0\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,10 +243,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEFood/schedule.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile GiRaFFEFood/schedule.ccl\n",
+    "schedule GiRaFFE_ExactWaldID at CCTK_INITIAL as GiRaFFEFood\n",
+    "{\n",
+    "  STORAGE: GiRaFFE_HO::GiRaFFE_vars[3]\n",
+    "  STORAGE: GiRaFFE_HO::GiRaFFE_Vs[1]\n",
+    "  STORAGE: GiRaFFE_HO::GiRaFFE_Bs[1]\n",
+    "  STORAGE: GiRaFFE_HO::GiRaFFE_u0[1]\n",
+    "  LANG: C\n",
+    "  READS: admbase::gxx(Everywhere)\n",
+    "  READS: admbase::gxy(Everywhere)\n",
+    "  READS: admbase::gxz(Everywhere)\n",
+    "  READS: admbase::gyy(Everywhere)\n",
+    "  READS: admbase::gyz(Everywhere)\n",
+    "  READS: admbase::gzz(Everywhere)\n",
+    "  READS: grid::x(Everywhere)\n",
+    "  READS: grid::y(Everywhere)\n",
+    "  READS: grid::y(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::BU0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::BU1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::BU2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::AD0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::AD1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::AD2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD2(Everywhere)\n",
+    "} \"Initial data for GiRaFFE\"\n",
+    "\n",
+    "schedule GiRaFFE_to_HydroBase at CCTK_INITIAL AFTER GiRaFFEFood\n",
+    "{\n",
+    "  LANG:C\n",
+    "  READS: GiRaFFE_HO::BU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::BU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::BU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  WRITES: HydroBase::Avec(Everywhere)\n",
+    "  WRITES: HydroBase::Bvec(Everywhere)\n",
+    "  WRITES: HydroBase::vel(Everywhere)\n",
+    "} \"Converts the GiRaFFE variables to HydroBase variables\"\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEFood/src/make.code.defn\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile GiRaFFEFood/src/make.code.defn\n",
+    "SRCS = InitialData.c"
+   ]
   }
  ],
  "metadata": {
