Tutorial-GiRaFFEFood_HO: Respond to Patrick's comment

--- a/Tutorial-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-GiRaFFEFood_HO.ipynb
@@ -19,7 +19,9 @@
     "v^i &= 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^i \\\\\n",
     "B^i &= \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\\\\n",
     "\\end{align}\n",
-    "-Is this a circular dependency? $\\tilde{S}_\\mu$ depends on $T^\\nu_{{\\rm EM} \\mu}$ which depends on the velocity, but the velocity depends on $\\tilde{S}_\\mu$."
+    "-Is this a circular dependency? $\\tilde{S}_\\mu$ depends on $T^\\nu_{{\\rm EM} \\mu}$ which depends on the velocity, but the velocity depends on $\\tilde{S}_\\mu$.\n",
+    "\n",
+    "**Zach says:** Check out lines 98-131 in the [original GiRaFFEfood implementation of ExactWald](https://bitbucket.org/zach_etienne/wvuthorns/src/62866e19058cd2477ee88d3a7fb259d5cfc2781a/GiRaFFEfood/src/ExactWald.cc?at=master&fileviewer=file-view-default). You will see that only $A_i$ and $v^i=u^i/u^0$ (not the Valencia 3-velocity that we must specify) are set. Then in the [ID\\_Converter\\_GiRaFFE](https://bitbucket.org/zach_etienne/wvuthorns/src/62866e19058cd2477ee88d3a7fb259d5cfc2781a/ID_converter_GiRaFFE/src/set_GiRaFFE_metric_GRMHD_variables_based_on_HydroBase_and_ADMBase_variables.C?at=master&fileviewer=file-view-default), $B^i$ and $\\tilde{S}_i$ are set based on these quantities. I think that we should have in our version of GiRaFFE a function that computes $\\tilde{S}_i$ from $B^i$, $v^i$, and metric quantities."
    ]
   },
   {
@@ -279,21 +281,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
