Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide: Add algebraic BSSN constraint

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -40,8 +40,13 @@
     "import NRPy_param_funcs as par\n",
     "import grid as gri\n",
     "import loop as lp\n",
+    "import indexedexp as ixp\n",
     "import finite_difference as fin\n",
     "import reference_metric as rfm\n",
+    "\n",
+    "# Set spatial dimension (must be 3 for BSSN)\n",
+    "DIM = 3\n",
+    "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
     "# Then we set the coordinate system for the numerical grid\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")"
@@ -107,7 +112,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 32.0856599808 seconds.\n"
+      "Finished in 30.2978990078 seconds.\n"
      ]
     }
    ],
@@ -165,8 +170,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3C: Enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint\n",
-    "\n"
+    "## Step 3C: Enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658))\n",
+    "\n",
+    "As mentioned in the [BSSN curvilinear tutorial module](Tutorial-BSSNCurvilinear.ipynb), the adopted formulation of Einstein's equations requires that $\\partial_t \\bar{\\gamma} = 0$, where $\\bar{\\gamma}=\\det \\bar{\\gamma}_{ij}$. Further, all initial data we choose satisfies $\\bar{\\gamma}=\\hat{\\gamma}$. \n",
+    "\n",
+    "However, numerical errors will cause $\\bar{\\gamma}$ to deviate from a constant in time. This actually disrupts the hyperbolicity of the PDEs, so to cure this, we adjust $\\bar{\\gamma}_{ij}$ at the end of each Runge-Kutta timestep, so that its determinant satisfies $\\bar{\\gamma}=\\hat{\\gamma}$ at all times. We adopt the following, rather standard prescription (Eq. 53 of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658)):\n",
+    "\n",
+    "$$\n",
+    "\\bar{\\gamma}_{ij} \\to \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij}.\n",
+    "$$\n",
+    "Notice the expression on the right is guaranteed to have determinant equal to $\\hat{\\gamma}$.\n",
+    "\n",
+    "Unfortunately $\\bar{\\gamma}_{ij}$ is not an evolved variable, so we must rewrite the above in terms of $h_{ij}$:\n",
+    "\\begin{align}\n",
+    "\\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij} &= \\bar{\\gamma}'_{ij}  \\\\\n",
+    "&= \\hat{\\gamma}_{ij} + \\varepsilon'_{ij} \\\\\n",
+    "&= \\hat{\\gamma}_{ij} + \\text{Re[i][j]} h'_{ij} \\\\\n",
+    "\\implies h'_{ij} &= \\left[\\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij}\\right] / \\text{Re[i][j]} \\\\\n",
+    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\frac{\\bar{\\gamma}_{ij}}{\\text{Re[i][j]}} - \\delta_{ij}\\\\\n",
+    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\frac{\\hat{\\gamma}_{ij} + \\text{Re[i][j]} h_{ij}}{\\text{Re[i][j]}} - \\delta_{ij}\\\\\n",
+    "&= \\left(\\frac{\\hat{\\gamma}}{\\bar{\\gamma}}\\right)^{1/3} \\left(\\delta_{ij} + h_{ij}\\right) - \\delta_{ij}\\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "We implement this with NRPy+ as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First define the Kronecker delta:\n",
+    "KroneckerDeltaDD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    KroneckerDeltaDD[i][i] = sp.sympify(1)\n",
+    "\n",
+    "# Then apply the constraint equation above.\n",
+    "hprimeDD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        hprimeDD[i][j] = \\\n",
+    "        (rfm.detgammahat/rhs.detgammabar)**(sp.Rational(1,3)) * (KroneckerDeltaDD[i][j] + rhs.hDD[i][j]) \\\n",
+    "        - KroneckerDeltaDD[i][j]"
    ]
   },
   {
@@ -178,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +232,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for Hamiltonian constraint\n",
-      "Finished in 8.63340902328 seconds.\n"
+      "Finished in 8.54266905785 seconds.\n"
      ]
     }
    ],
@@ -228,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
